# kinsight

./: .dockerignore  .env.example  .gitignore  .graphifyignore  00-canon.md  0001-projet-autonome-integration-api.md  0002-edw-postgres-multi-schemas-kimball.md  0003-airbyte-el-dbt-transformations.md  0008-conventions-uuidv7-bigint-xof.md  DEMARRAGE_LOCAL.md  docker-compose.dokploy.yml
.claude/: launch.json
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/apps/accounts/: apps.py  models.py  rbac.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py
backend/apps/ai_copilot/: apps.py  context.py  intent.py  models.py  providers.py  services.py  tasks.py  tests.py  tools.py  urls.py  value_resolver.py  views.py
backend/apps/ai_copilot/migrations/: 0001_initial.py  0002_aiactionrequest_destructive_and_more.py  0003_aiactionapproval_uniq_approval_per_user.py
backend/apps/audit/: apps.py  models.py
backend/apps/governance/: apps.py  bindings.py  exports.py  gateway.py  module_views.py  services.py  tests.py  urls.py  views.py
backend/apps/integrations/: apps.py  encryption.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/organizations/: apps.py  models.py
backend/config/: celery.py  settings.py  urls.py
backend/scripts/: verify.sh
backend/src/k_insight/: __init__.py
backend/tests/: test_access.py  test_alerts.py  test_grounding.py  test_group_score.py  test_hr_kpis.py  test_hr_mart_reconciliation.py  test_hr_score.py
(+152 files in other folders)
